// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReviewConsequenceTable > should render the table with data 1`] = `
[
  <dl
    className="govuk-summary-list"
  >
    <div
      className="govuk-summary-list__row"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Consequence type
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        Network wide
      </dd>
      <dd
        className="govuk-summary-list__actions"
      >
        <ul
          className="govuk-summary-list__actions-list"
        >
          <li
            className="govuk-summary-list__actions-list-item"
          >
            <a
              className="govuk-link"
              href="/type-of-consequence/2/0?return=%2Freview-disruption"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
            >
              Change
              <span
                className="govuk-visually-hidden"
              >
                Consequence type
              </span>
            </a>
          </li>
        </ul>
      </dd>
    </div>
    <div
      className="govuk-summary-list__row"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Mode of transport
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        Bus
      </dd>
      <dd
        className="govuk-summary-list__actions"
      >
        <ul
          className="govuk-summary-list__actions-list"
        >
          <li
            className="govuk-summary-list__actions-list-item"
          >
            <a
              className="govuk-link"
              href="/create-consequence-network/2/0?return=%2Freview-disruption"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
            >
              Change
              <span
                className="govuk-visually-hidden"
              >
                Mode of transport
              </span>
            </a>
          </li>
        </ul>
      </dd>
    </div>
    <div
      className="govuk-summary-list__row"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Disruption Area
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        N/A
      </dd>
      <dd
        className="govuk-summary-list__actions"
      >
        <ul
          className="govuk-summary-list__actions-list"
        >
          <li
            className="govuk-summary-list__actions-list-item"
          >
            <a
              className="govuk-link"
              href="/create-consequence-network/2/0?return=%2Freview-disruption"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
            >
              Change
              <span
                className="govuk-visually-hidden"
              >
                Disruption Area
              </span>
            </a>
          </li>
        </ul>
      </dd>
    </div>
    <div
      className="govuk-summary-list__row"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Advice to display
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        The road is closed for the following reasons: Example, example, example, example
      </dd>
      <dd
        className="govuk-summary-list__actions"
      >
        <ul
          className="govuk-summary-list__actions-list"
        >
          <li
            className="govuk-summary-list__actions-list-item"
          >
            <a
              className="govuk-link"
              href="/create-consequence-network/2/0?return=%2Freview-disruption"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
            >
              Change
              <span
                className="govuk-visually-hidden"
              >
                Advice to display
              </span>
            </a>
          </li>
        </ul>
      </dd>
    </div>
    <div
      className="govuk-summary-list__row"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Remove from journey planner
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        Yes
      </dd>
      <dd
        className="govuk-summary-list__actions"
      >
        <ul
          className="govuk-summary-list__actions-list"
        >
          <li
            className="govuk-summary-list__actions-list-item"
          >
            <a
              className="govuk-link"
              href="/create-consequence-network/2/0?return=%2Freview-disruption"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
            >
              Change
              <span
                className="govuk-visually-hidden"
              >
                Remove from journey planner
              </span>
            </a>
          </li>
        </ul>
      </dd>
    </div>
    <div
      className="govuk-summary-list__row"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Disruption delay
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        33 minutes
      </dd>
      <dd
        className="govuk-summary-list__actions"
      >
        <ul
          className="govuk-summary-list__actions-list"
        >
          <li
            className="govuk-summary-list__actions-list-item"
          >
            <a
              className="govuk-link"
              href="/create-consequence-network/2/0?return=%2Freview-disruption"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
            >
              Change
              <span
                className="govuk-visually-hidden"
              >
                Disruption delay
              </span>
            </a>
          </li>
        </ul>
      </dd>
    </div>
  </dl>,
  <button
    className="govuk-button govuk-button--warning mt-4"
    data-module="govuk-button"
    onClick={[Function]}
  >
    Delete consequence
  </button>,
  <button
    className="govuk-button govuk-button--secondary mt-4 ml-4"
    data-module="govuk-button"
    formAction="/api/duplicate-consequence?consequenceId=0&return=/review-disruption"
  >
    Duplicate consequence
  </button>,
]
`;

exports[`ReviewConsequenceTable > should render the table with data without change links 1`] = `
<dl
  className="govuk-summary-list"
>
  <div
    className="govuk-summary-list__row"
  >
    <dt
      className="govuk-summary-list__key"
    >
      Consequence type
    </dt>
    <dd
      className="govuk-summary-list__value"
    >
      Network wide
    </dd>
    <dd
      className="govuk-summary-list__actions"
    >
      <ul
        className="govuk-summary-list__actions-list"
      />
    </dd>
  </div>
  <div
    className="govuk-summary-list__row"
  >
    <dt
      className="govuk-summary-list__key"
    >
      Mode of transport
    </dt>
    <dd
      className="govuk-summary-list__value"
    >
      Bus
    </dd>
    <dd
      className="govuk-summary-list__actions"
    >
      <ul
        className="govuk-summary-list__actions-list"
      />
    </dd>
  </div>
  <div
    className="govuk-summary-list__row"
  >
    <dt
      className="govuk-summary-list__key"
    >
      Disruption Area
    </dt>
    <dd
      className="govuk-summary-list__value"
    >
      N/A
    </dd>
    <dd
      className="govuk-summary-list__actions"
    >
      <ul
        className="govuk-summary-list__actions-list"
      />
    </dd>
  </div>
  <div
    className="govuk-summary-list__row"
  >
    <dt
      className="govuk-summary-list__key"
    >
      Advice to display
    </dt>
    <dd
      className="govuk-summary-list__value"
    >
      The road is closed for the following reasons: Example, example, example, example
    </dd>
    <dd
      className="govuk-summary-list__actions"
    >
      <ul
        className="govuk-summary-list__actions-list"
      />
    </dd>
  </div>
  <div
    className="govuk-summary-list__row"
  >
    <dt
      className="govuk-summary-list__key"
    >
      Remove from journey planner
    </dt>
    <dd
      className="govuk-summary-list__value"
    >
      Yes
    </dd>
    <dd
      className="govuk-summary-list__actions"
    >
      <ul
        className="govuk-summary-list__actions-list"
      />
    </dd>
  </div>
  <div
    className="govuk-summary-list__row"
  >
    <dt
      className="govuk-summary-list__key"
    >
      Disruption delay
    </dt>
    <dd
      className="govuk-summary-list__value"
    >
      33 minutes
    </dd>
    <dd
      className="govuk-summary-list__actions"
    >
      <ul
        className="govuk-summary-list__actions-list"
      />
    </dd>
  </div>
</dl>
`;
